Add ability to update and delete statuses in settings
